--- a/Kconfig
+++ b/Kconfig
@@ -1,8 +1,8 @@
-# Sensor data simulator
-#
-# Copyright (c) 2019 Nordic Semiconductor
-#
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
-#
+# Key Toggle Input Processor
+DT_COMPAT_ZMK_INPUT_PROCESSOR_KEYTOGGLE := zmk,input-processor-keytoggle
 
-rsource "src/pointing/Kconfig"
+config ZMK_INPUT_PROCESSOR_KEYTOGGLE
+    bool "Key Toggle Input Processor"
+    help
+        Enable the key toggle input processor, which can be used to toggle
+        a key's state based on input events.
