--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-zephyr_library()
+add_subdirectory(src/pointing)
 
-zephyr_library_sources_ifdef(CONFIG_ZMK_INPUT_PROCESSOR_KEYTOGGLE src/pointing/input-processor-keytoggle.c)
-zephyr_include_directories(${APPLICATION_SOURCE_DIR}/include)
+zephyr_include_directories(include)
